term_category exploration

--- a/genz_slang.ipynb
+++ b/genz_slang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "810cf9eb",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1283548e",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3015d88d",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7e9cede9",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
        "max      3990.000000    6121.000000        1.000000           1428.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,11 +416,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7f4a5061",
+   "execution_count": 5,
+   "id": "ed8006fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total record count: 535396 \n",
+      "\n",
+      "Total number of  columns in the dataset 22\n",
+      "The columns in list form ['record_id', 'timestamp', 'slang_term', 'term_category', 'term_meaning', 'origin_platform', 'usage_platform', 'region', 'user_id', 'user_age_group', 'usage_context', 'lifecycle_phase', 'intensity_score', 'sentiment', 'sentiment_score', 'ironic_usage', 'likes', 'shares', 'comments', 'virality_score', 'is_viral', 'days_since_emergence']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Total record count: {len(df)} \\n\")\n",
+    "print(f\"Total number of  columns in the dataset {len(df.columns)}\")\n",
+    "print(f\"The columns in list form {list(df.columns)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8cb61942",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "slang_term\n",
+       "slay              19004\n",
+       "based             18541\n",
+       "bussin            17651\n",
+       "rizz              16782\n",
+       "gaslighting       16766\n",
+       "sigma             15630\n",
+       "ate               15626\n",
+       "delulu            15244\n",
+       "snatched          15201\n",
+       "no cap            15107\n",
+       "mid               14642\n",
+       "rent free         14401\n",
+       "brain rot         14324\n",
+       "main character    14324\n",
+       "NPC               14194\n",
+       "Name: record_id, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Top 15 slang words used \n",
+    "slang_words = df.groupby('slang_term')['record_id'].count().sort_values(ascending=False).head(15)\n",
+    "slang_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9252e18b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "term_category\n",
+       "approval        106901\n",
+       "insult           71116\n",
+       "identity         57849\n",
+       "humor            47789\n",
+       "appearance       39797\n",
+       "reaction         30304\n",
+       "emotion          28021\n",
+       "emphasis         24147\n",
+       "behavior         23903\n",
+       "dating           21321\n",
+       "attraction       16782\n",
+       "manipulation     16766\n",
+       "description      12961\n",
+       "meme             12930\n",
+       "exposure         10596\n",
+       "social            9994\n",
+       "food              4219\n",
+       "Name: record_id, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Term category distribution \n",
+    "\n",
+    "term_cat = df.groupby('term_category')['record_id'].count().sort_values(ascending=False)\n",
+    "term_cat\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1cf19f64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insult\n",
+      "['simp' 'cheugy' 'mid' 'touch grass' 'NPC' 'delulu']\n",
+      "Number of terms 6\n",
+      "\n",
+      "Social\n",
+      "['vibe check']\n",
+      "Number of terms 1\n",
+      "\n",
+      "Emphasis\n",
+      "['no cap' 'periodt']\n",
+      "Number of terms 2\n",
+      "\n",
+      "Emotion\n",
+      "['hits different' 'rent free']\n",
+      "Number of terms 2\n",
+      "\n",
+      "Approval\n",
+      "['bussin' 'slaps' 'slay' 'based' 'understood the assignment' 'ate' 'valid']\n",
+      "Number of terms 7\n",
+      "\n",
+      "Identity\n",
+      "['main character' 'era' 'sigma' 'brat' 'aura']\n",
+      "Number of terms 5\n",
+      "\n",
+      "Exposure\n",
+      "['caught in 4k']\n",
+      "Number of terms 1\n",
+      "\n",
+      "Reaction\n",
+      "['sheesh' 'gyatt' 'cooked']\n",
+      "Number of terms 3\n",
+      "\n",
+      "Description\n",
+      "['its giving']\n",
+      "Number of terms 1\n",
+      "\n",
+      "Manipulation\n",
+      "['gaslighting']\n",
+      "Number of terms 1\n",
+      "\n",
+      "Appearance\n",
+      "['snatched' 'mewing' 'looksmaxxing' 'demure']\n",
+      "Number of terms 4\n",
+      "\n",
+      "Attraction\n",
+      "['rizz']\n",
+      "Number of terms 1\n",
+      "\n",
+      "Dating\n",
+      "['ick' 'beige flag']\n",
+      "Number of terms 2\n",
+      "\n",
+      "Behavior\n",
+      "['unhinged' 'yapping']\n",
+      "Number of terms 2\n",
+      "\n",
+      "Humor\n",
+      "['ohio' 'brain rot' 'girl math' 'fanum tax' 'Roman Empire' 'very mindful']\n",
+      "Number of terms 6\n",
+      "\n",
+      "Meme\n",
+      "['skibidi']\n",
+      "Number of terms 1\n",
+      "\n",
+      "Food\n",
+      "['girl dinner']\n",
+      "Number of terms 1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for category in df['term_category'].unique():\n",
+    "    term = df[df['term_category'] == category]\n",
+    "    print(category.title())\n",
+    "    print(term['slang_term'].unique())\n",
+    "    print(f\"Number of terms {term['slang_term'].nunique()}\")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ce8bfb6",
+   "metadata": {},
+   "source": [
+    "We can see that the approval category has the largest number of terms hence explaining why it is the most used category. \n",
+    "A second theory is since the algorithms in social media are designed specifically for you, you will approve most that is displayed to you. "
+   ]
   }
  ],
  "metadata": {
