Top slang terms meaning and category

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -412,6 +412,64 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f60f2e09",
+   "metadata": {},
+   "source": [
+    "The Leading term is 'Slay' followed closely by 'based'. \n",
+    "But what do they mean and which category do they fall into ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e883bf7",
+   "metadata": {},
+   "source": [
+    "### Meaning and Category of the top 15 terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa26b1d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                        term_meaning term_category\n",
+      "slang_term                                                        \n",
+      "slay              doing something exceptionally well      approval\n",
+      "based           authentic, not caring about opinions      approval\n",
+      "bussin                  really good, especially food      approval\n",
+      "rizz             charisma, ability to attract others    attraction\n",
+      "gaslighting               psychological manipulation  manipulation\n",
+      "sigma                     lone wolf personality type      identity\n",
+      "ate                       did really well, killed it      approval\n",
+      "delulu          delusional, unrealistic expectations        insult\n",
+      "snatched               looking really good, on point    appearance\n",
+      "no cap                              no lie, for real      emphasis\n",
+      "mid                        mediocre, nothing special        insult\n",
+      "rent free        constantly thinking about something       emotion\n",
+      "brain rot        consuming too much internet content         humor\n",
+      "main character    being the protagonist of your life      identity\n",
+      "NPC                someone who acts scripted/robotic        insult\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating of a dataframe with only the top slang terms\n",
+    "top_terms_info = df[df['slang_term'].isin(top_terms.index)].copy()\n",
+    "\n",
+    "# changing the slang_term column to be categorical, categories being the top terms and ordering it by popularity\n",
+    "top_terms_info['slang_term'] = pd.Categorical(top_terms_info['slang_term'], categories=top_terms.index, ordered=True)\n",
+    "\n",
+    "# printing the top slang terms  their meaning and category\n",
+    "print(top_terms_info.sort_values('slang_term')[['slang_term', 'term_meaning', 'term_category']].set_index('slang_term').drop_duplicates().to_string())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7762fcab",
    "metadata": {},
    "source": [
@@ -420,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "cb939e1f",
    "metadata": {},
    "outputs": [
